--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/experimental-nextjs-app-support": "^0.4.3",
     "@nextui-org/react": "^2.1.13",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -21,6 +22,7 @@
     "@safe-global/api-kit": "^1.3.1",
     "@safe-global/protocol-kit": "^1.3.0",
     "@safe-global/safe-core-sdk-types": "^2.3.0",
+    "@studio-freight/lenis": "^1.0.27",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "ethers": "^5.7.2",
