--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@safe-global/protocol-kit": "^1.3.0",
     "@safe-global/safe-core-sdk-types": "^2.3.0",
     "@studio-freight/lenis": "^1.0.27",
+    "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "ethers": "^5.7.2",
