--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@safe-global/safe-core-sdk-types": "^2.3.0",
     "@studio-freight/lenis": "^1.0.27",
     "@tanstack/react-table": "^8.10.7",
+    "alchemy-sdk": "^2.10.1",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
