--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
     "encoding": "^0.1.13",
+    "ethereumjs-util": "^7.1.5",
     "ethers": "^5.7.2",
     "framer-motion": "^10.16.4",
     "graphql": "^16.8.1",
     "lucide-react": "^0.288.0",
+    "moment": "^2.29.4",
     "next": "13.5.6",
     "next-themes": "^0.2.1",
     "poc-avatarkit": "^0.1.3",
